examples/microservice-demo/deploy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo
  labels:
    app: platform-demo
spec:
  selector:
    app: platform-demo
  ports:
    - name: http
      port: 80
      targetPort: http
