examples/microservice-demo/deploy/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-demo
spec:
  parentRefs:
    - name: traefik
      namespace: kube-system
  hostnames:
    - "platform-demo.<DOMAIN>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: platform-demo
          port: 80
